# sbf-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE-MIT  README.md  bacon.toml  flake.nix
src/: common.rs  data_structure.rs  error.rs  hierarchy.rs  lib.rs  metrics.rs  sbf.rs  tests.rs  types.rs
