[package]
name = "sbf"
version = "0.1.1"
authors = ["Filippo Berto <berto.f@protonmail.com>"]
edition = "2018"
homepage = "https://github.com/bertof/sbf-rs"
description = """
Spatial Bloom Filter, a probabilistic data structure
that maps elements of a space to indexed disjoint subsets of that space.
"""
keywords = ["probabilistic", "data", "mapping"]
categories = ["data-structures"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/sbf"

[features]
default = ["md5_hash"]
md4_hash = ["md4"]
md5_hash = ["md5"]
json = ["serde", "serde_json"]
metrics = []

[dependencies]
byteorder = "1.3"
num = "0.2"
rand = "0.7"
rayon = "1.2"

md5 = { version = "0.6", optional = true }
md4 = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

