[package]
name = "sbf"
version = "0.1.5"
authors = ["Filippo Berto <berto.f@protonmail.com>"]
edition = "2021"
homepage = "https://github.com/bertof/sbf-rs"
description = """
Spatial Bloom Filter, a probabilistic data structure
that maps elements of a space to indexed disjoint subsets of that space.
"""
keywords = ["probabilistic", "data", "mapping"]
categories = ["data-structures"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/sbf"
repository = "https://gitlab.com/bertof/sbf-rs"

[features]
default = ["md5_hash"]
md4_hash = ["md4"]
md5_hash = ["md5"]
serde_support = ["serde"]
metrics = []

[dependencies]
byteorder = "1.3"
num = "0.4"
rand = "0.8"
rayon = "1.3.1"
md5 = { version = "0.7", optional = true }
md4 = { version = "0.10", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = { version = "1.0" }
